@@ -28,11 +28,11 @@ object_to_index(cl_object n)
 	case t_fixnum: {
 		cl_fixnum out = fix(n);
 		if (out < 0 || out >= ADIMLIM)
-			FEtype_error_index(n);
+			FEtype_error_index(Cnil, n);
 		return out;
 	}
 	case t_bignum:
-		FEtype_error_index(n);
+		FEtype_error_index(Cnil, n);
 	default:
 		FEtype_error_integer(n);
 	}
