@@ -322,7 +322,7 @@ cl_object
 nth(cl_fixnum n, cl_object x)
 {
 	if (n < 0)
-		FEtype_error_index(MAKE_FIXNUM(n));
+		FEtype_error_index(x, MAKE_FIXNUM(n));
 	/* INV: No need to check for circularity since we visit
 	   at most `n' conses */
 	for (; n > 0 && CONSP(x); n--)
@@ -344,7 +344,7 @@ cl_object
 nthcdr(cl_fixnum n, cl_object x)
 {
 	if (n < 0)
-		FEtype_error_index(MAKE_FIXNUM(n));
+		FEtype_error_index(x, MAKE_FIXNUM(n));
 	while (n-- > 0 && !ENDP(x))
 		x = CDR(x);
 	return(x);
